[metadata]
name = kubra
version = 0.1.3
author = Forest Gregg
author_email = fgregg@datamade.us
description = command line tool for downloading utility outage data
url = https://github.com/fgregg/kubra
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = kubra
install_requires = click; tqdm; scrapelib; polyline; mercantile

[options.entry_points]
console_scripts = kubra=kubra:main
